--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <!--Note: DO NOT USE the "latest" folder in production. Replace "latest" with a version number like "1.0.0"-->
         <!--EX:<script src="//amp.azure.net/libs/amp/1.0.0/azuremediaplayer.min.js"></script>-->
         <!--Azure Media Player versions can be queried from //aka.ms/ampchangelog-->
-        <link href="https://amp.azure.net/libs/amp/latest/skins/amp-default/azuremediaplayer.min.css" rel="stylesheet">
-        <script src="https://amp.azure.net/libs/amp/latest/azuremediaplayer.min.js"></script>
+        <link href="https://amp.azure.net/libs/amp/2.3.5/skins/amp-default/azuremediaplayer.min.css" rel="stylesheet">
+        <script src="https://amp.azure.net/libs/amp/2.3.5/azuremediaplayer.min.js"></script>
         <!--*****END OF Azure Media Player Scripts*****-->
 
 </head>
